--- a/arch/arm/configs/bdb2-svc_defconfig
+++ b/arch/arm/configs/bdb2-svc_defconfig
@@ -24,9 +24,9 @@ CONFIG_BOARD_ARA_SVC=y
 # CONFIG_BOARD_ARA_SVC_BDB1B is not set
 CONFIG_BOARD_ARA_SVC_BDB2=y
 CONFIG_ARCH_HAS_SCHEDULER_WATCHDOG=y
-# CONFIG_BOOT_FLASH is not set
+CONFIG_BOOT_FLASH=y
 # CONFIG_BOOT_COPYTORAM is not set
-CONFIG_BOOT_RAM=y
+# CONFIG_BOOT_RAM is not set
 CONFIG_MPU=y
 CONFIG_MPU_NULL_REGION=y
 # CONFIG_ARM_SEMIHOSTING is not set
@@ -53,8 +53,11 @@ CONFIG_INIT_TASK_NAME="svc_init"
 #
 CONFIG_SCHEDULER_WATCHDOG=y
 CONFIG_SERIAL=y
-# CONFIG_UART16550 is not set
-CONFIG_STM32_USART=y
+CONFIG_UART16550=y
+CONFIG_UART16550_FIFO_DEPTH=16
+CONFIG_UART16550_RX_BUFFER_SIZE=64
+CONFIG_UART16550_TX_BUFFER_SIZE=64
+# CONFIG_STM32_USART is not set
 # CONFIG_UNIPRO is not set
 CONFIG_I2C=y
 # CONFIG_I2C_DW is not set
@@ -64,7 +67,23 @@ CONFIG_GPIO=y
 # CONFIG_TCA6408 is not set
 # CONFIG_TCA64XX is not set
 CONFIG_STM32_GPIO=y
-# CONFIG_GREYBUS is not set
+CONFIG_GREYBUS=y
+CONFIG_GREYBUS_MODULE=y
+# CONFIG_GREYBUS_AP is not set
+# CONFIG_GREYBUS_UNIPRO is not set
+# CONFIG_GREYBUS_USB is not set
+CONFIG_GREYBUS_NULL=y
+
+#
+# Module
+#
+# CONFIG_GREYBUS_GPIO is not set
+# CONFIG_GREYBUS_I2C is not set
+# CONFIG_GREYBUS_I2S is not set
+# CONFIG_GREYBUS_BATTERY is not set
+# CONFIG_GREYBUS_VIBRATOR is not set
+# CONFIG_GREYBUS_LOOPBACK is not set
+# CONFIG_GREYBUS_CONTROL is not set
 # CONFIG_ARA_BACKPORT is not set
 CONFIG_SPI=y
 CONFIG_STM32_SPI=y
@@ -93,7 +112,7 @@ CONFIG_OPTIMIZATION_LEVEL="-Os"
 CONFIG_APP_GREYBUS_UTILS=y
 # CONFIG_APP_APBRIDGEA is not set
 CONFIG_APP_SVC=y
-CONFIG_APP_GPIO=y
+# CONFIG_APP_GPIO is not set
 # CONFIG_APP_GB_LOOPBACK is not set
 # CONFIG_APP_I2S is not set
 # CONFIG_APP_UNIPRO is not set
