apps: add free application
Add free application to get information about the current memory usage.

Signed-off-by: Fabien Parent <parent.f@gmail.com>

--- a/apps/Kconfig
+++ b/apps/Kconfig
@@ -29,6 +29,9 @@ config APP_UNIPRO
     bool "UniPro"
     select UNIPRO
 
+config APP_FREE
+    bool "free"
+
 if MACH_TSB
 source apps/tsb/Kconfig
 endif
