--- a/apps/Makefile
+++ b/apps/Makefile
@@ -8,3 +8,4 @@ obj-$(CONFIG_APP_UNIPRO) += unipro.o
 obj-$(CONFIG_APP_GPIO) += gpio.o
 obj-$(CONFIG_APP_I2S) += i2s.o
 obj-$(CONFIG_APP_GREYBUS_LOOPBACK) += gb-loopback.o
+obj-$(CONFIG_APP_FREE) += free.o
