apps: add ls application
Signed-off-by: Fabien Parent <parent.f@gmail.com>

--- a/apps/Makefile
+++ b/apps/Makefile
@@ -9,3 +9,4 @@ obj-$(CONFIG_APP_GPIO) += gpio.o
 obj-$(CONFIG_APP_I2S) += i2s.o
 obj-$(CONFIG_APP_GREYBUS_LOOPBACK) += gb-loopback.o
 obj-$(CONFIG_APP_FREE) += free.o
+obj-$(CONFIG_APP_LS) += ls.o
