tsb: unipro: rewrite driver using unipro core api
Signed-off-by: Fabien Parent <parent.f@gmail.com>

--- a/drivers/unipro/Makefile
+++ b/drivers/unipro/Makefile
@@ -4,3 +4,5 @@
 # Provided under the three clause BSD license found in the LICENSE file.
 
 obj-y += core.o
+obj-$(CONFIG_UNIPRO_TSB) += unipro-tsb-es2.o
+obj-$(CONFIG_UNIPRO_TSB) += unipro-tsb-es2-mphy-fixups.o
