unipro: write core unipro api
Signed-off-by: Fabien Parent <parent.f@gmail.com>

--- a/drivers/Makefile
+++ b/drivers/Makefile
@@ -11,6 +11,7 @@ subdirs-$(CONFIG_GPIO) += gpio
 subdirs-$(CONFIG_GREYBUS) += greybus
 subdirs-$(CONFIG_ARA_BACKPORT) += ara
 subdirs-$(CONFIG_SPI) += spi
+subdirs-$(CONFIG_UNIPRO) += unipro
 
 obj-y += core.o
 obj-y += log.o
