stm32: svc: update defconfig
Signed-off-by: Fabien Parent <parent.f@gmail.com>

--- a/arch/arm/configs/bdb2-svc_defconfig
+++ b/arch/arm/configs/bdb2-svc_defconfig
@@ -58,7 +58,9 @@ CONFIG_UART16550_FIFO_DEPTH=16
 CONFIG_UART16550_RX_BUFFER_SIZE=64
 CONFIG_UART16550_TX_BUFFER_SIZE=64
 # CONFIG_STM32_USART is not set
-# CONFIG_UNIPRO is not set
+CONFIG_UNIPRO=y
+# CONFIG_UNIPRO_TSB is not set
+CONFIG_UNIPRO_T6WT0XBG=y
 CONFIG_I2C=y
 # CONFIG_I2C_DW is not set
 CONFIG_STM32_I2C=y
@@ -116,3 +118,5 @@ CONFIG_APP_SVC=y
 # CONFIG_APP_GB_LOOPBACK is not set
 # CONFIG_APP_I2S is not set
 # CONFIG_APP_UNIPRO is not set
+# CONFIG_APP_FREE is not set
+# CONFIG_APP_LS is not set
