svc: move greybus svc protocol to greybus driver directory
Signed-off-by: Fabien Parent <parent.f@gmail.com>

--- a/drivers/greybus/Kconfig
+++ b/drivers/greybus/Kconfig
@@ -30,6 +30,9 @@ choice
     config GREYBUS_MODULE
         bool "Module"
 
+    config GREYBUS_SVC
+        bool "SVC"
+
     config GREYBUS_AP
         bool "AP"
 endchoice
