--- a/arch/arm/configs/bdb2-svc_defconfig
+++ b/arch/arm/configs/bdb2-svc_defconfig
@@ -70,22 +70,9 @@ CONFIG_GPIO=y
 # CONFIG_TCA64XX is not set
 CONFIG_STM32_GPIO=y
 CONFIG_GREYBUS=y
-CONFIG_GREYBUS_MODULE=y
+# CONFIG_GREYBUS_MODULE is not set
+CONFIG_GREYBUS_SVC=y
 # CONFIG_GREYBUS_AP is not set
-# CONFIG_GREYBUS_UNIPRO is not set
-# CONFIG_GREYBUS_USB is not set
-CONFIG_GREYBUS_NULL=y
-
-#
-# Module
-#
-# CONFIG_GREYBUS_GPIO is not set
-# CONFIG_GREYBUS_I2C is not set
-# CONFIG_GREYBUS_I2S is not set
-# CONFIG_GREYBUS_BATTERY is not set
-# CONFIG_GREYBUS_VIBRATOR is not set
-# CONFIG_GREYBUS_LOOPBACK is not set
-# CONFIG_GREYBUS_CONTROL is not set
 # CONFIG_ARA_BACKPORT is not set
 CONFIG_SPI=y
 CONFIG_STM32_SPI=y
