--- a/arch/arm/configs/bdb2-svc_defconfig
+++ b/arch/arm/configs/bdb2-svc_defconfig
@@ -53,11 +53,8 @@ CONFIG_INIT_TASK_NAME="svc_init"
 #
 CONFIG_SCHEDULER_WATCHDOG=y
 CONFIG_SERIAL=y
-CONFIG_UART16550=y
-CONFIG_UART16550_FIFO_DEPTH=16
-CONFIG_UART16550_RX_BUFFER_SIZE=64
-CONFIG_UART16550_TX_BUFFER_SIZE=64
-# CONFIG_STM32_USART is not set
+# CONFIG_UART16550 is not set
+CONFIG_STM32_USART=y
 CONFIG_UNIPRO=y
 # CONFIG_UNIPRO_TSB is not set
 CONFIG_UNIPRO_T6WT0XBG=y
