--- a/apps/Makefile
+++ b/apps/Makefile
@@ -10,3 +10,4 @@ obj-$(CONFIG_APP_I2S) += i2s.o
 obj-$(CONFIG_APP_GREYBUS_LOOPBACK) += gb-loopback.o
 obj-$(CONFIG_APP_FREE) += free.o
 obj-$(CONFIG_APP_LS) += ls.o
+obj-$(CONFIG_APP_YES) += yes.o
