apps: term: add terminal application
Signed-off-by: Fabien Parent <parent.f@gmail.com>

--- a/apps/Kconfig
+++ b/apps/Kconfig
@@ -41,6 +41,9 @@ config APP_YES
 config APP_I2CDETECT
     bool "i2cdetect"
 
+config APP_TERM
+    bool "term"
+
 if MACH_TSB
 source apps/tsb/Kconfig
 endif
