--- a/drivers/greybus/ap/Makefile
+++ b/drivers/greybus/ap/Makefile
@@ -16,3 +16,4 @@ obj-y += interface.o
 
 obj-$(CONFIG_GREYBUS_AP_GPIO) += gpio.o
 obj-$(CONFIG_GREYBUS_AP_I2C) += i2c.o
+obj-$(CONFIG_GREYBUS_AP_UART) += uart.o
