--- a/arch/arm/Makefile.build
+++ b/arch/arm/Makefile.build
@@ -15,6 +15,7 @@ ifeq ($(CONFIG_CPU_ARMV7M),y)
 	CFLAGS  += -march=armv7-m
 	ASFLAGS += -march=armv7-m
 	LDFLAGS  += -T $(ARM_DIR)/arm-v7m/arm-v7m.ld
+	LIBGCC  += $(ARM_DIR)/arm-v7m/libgcc.a
 endif
 
 ifeq ($(CONFIG_CPU_ARM_THUMB),y)
