kernel: add kconfig option for binary format loaders
Signed-off-by: Fabien Parent <parent.f@gmail.com>

--- a/kernel/Kconfig
+++ b/kernel/Kconfig
@@ -46,4 +46,9 @@ config INIT_TASK_NAME
     string "Init task name"
     default "shell_main"
 
+menu "Binary loaders"
+    config ELF
+        bool "ELF Binary loader"
+endmenu
+
 endmenu
