--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -14,7 +14,7 @@ obj-$(CONFIG_SCHED_FIFO) += scheduler-fifo.o
 obj-y += task.o
 obj-y += panic.o
 obj-y += syscall.o
-obj-y += elf-loader.o
+obj-$(CONFIG_ELF) += elf-loader.o
 obj-y += dev.o
 
 ld-script-y += kernel.ld
