--- a/drivers/usb/host/Makefile
+++ b/drivers/usb/host/Makefile
@@ -3,6 +3,8 @@ obj-$(CONFIG_USB_CORE) += hub.o
 #obj-$(CONFIG_USB_CORE) += generic.o
 obj-$(CONFIG_USB_DWC2) += hcd-dwc2.o
 
+obj-y += mass-storage.o
+
 ifeq ($(CONFIG_USB_DWC2),y)
 CFLAGS += -DDWC_PHABOS
 endif
